memcached/internal/memcached_text.c

#line 1 "memcached/internal/memcached_text.rl"
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include <string.h>
#include <assert.h>
#include <stdio.h>

#include <lua.h>
#include <lualib.h>
#include <lauxlib.h>

#include "memcached_text.h"


#line 18 "memcached/internal/memcached_text.c"
static const int memcached_start = 1;
static const int memcached_first_final = 114;
static const int memcached_error = 0;

static const int memcached_en_main = 1;


#line 17 "memcached/internal/memcached_text.rl"


#if defined(__APPLE__)
#  define MC_EXPORT __attribute__((visibility("default")))
#elif defined(_WIN32) || defined(__WIN32__)
#  define MC_EXPORT __declspec(dllexport)
#else
#  define MC_EXPORT
#endif

static int
mc_strtol(const char *start, const char *end, int64_t *num)
{
    *num = 0;
    char sign = 1;
    if (*start == '-') { sign *= -1; start++; }
    while (start < end) {
        uint8_t code = *start++;
        if (code < '0' || code > '9')
            return -1;
        *num = (*num) * 10 + (code - '0');
    }
    return 0;
}

static int
mc_strtoul(const char *start, const char *end, uint64_t *num)
{
    *num = 0;
    while (start < end) {
        uint8_t code = *start++;
        if (code < '0' || code > '9')
            return -1;
        *num = (*num) * 10 + (code - '0');
    }
    return 0;
}

MC_EXPORT int
mc_parse(struct mc_request *req, const char **p_ptr, const char *pe) {
    const char *p = *p_ptr;
    int cs = 0;
    const char *s = NULL;
    bool done = false;

    memset(req, 0, sizeof(struct mc_request));
    
#line 74 "memcached/internal/memcached_text.c"
	{
	cs = memcached_start;
	}

#line 79 "memcached/internal/memcached_text.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 65: goto st2;
		case 67: goto st28;
		case 68: goto st41;
		case 70: goto st67;
		case 71: goto st78;
		case 73: goto st85;
		case 80: goto st89;
		case 81: goto st96;
		case 82: goto st100;
		case 83: goto st107;
		case 97: goto st2;
		case 99: goto st28;
		case 100: goto st41;
		case 102: goto st67;
		case 103: goto st78;
		case 105: goto st85;
		case 112: goto st89;
		case 113: goto st96;
		case 114: goto st100;
		case 115: goto st107;
	}
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 68: goto st3;
		case 80: goto st23;
		case 100: goto st3;
		case 112: goto st23;
	}
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 68: goto st4;
		case 100: goto st4;
	}
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 32 )
		goto tr14;
	goto st0;
tr14:
#line 127 "memcached/internal/memcached_text.rl"
	{req->op = MC_ADD;}
	goto st5;
tr49:
#line 129 "memcached/internal/memcached_text.rl"
	{req->op = MC_APPEND;}
	goto st5;
tr147:
#line 130 "memcached/internal/memcached_text.rl"
	{req->op = MC_PREPEND;}
	goto st5;
tr159:
#line 128 "memcached/internal/memcached_text.rl"
	{req->op = MC_REPLACE;}
	goto st5;
tr163:
#line 126 "memcached/internal/memcached_text.rl"
	{req->op = MC_SET;}
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 163 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 13: goto st0;
		case 32: goto st5;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st0;
	goto tr15;
tr15:
#line 64 "memcached/internal/memcached_text.rl"
	{
            s = p;
            for (; p < pe && *p != ' ' && *p != '\r' && *p != '\n'; p++);
            if (*p == ' ' || *p == '\r' || *p == '\n') {
                if (req->key == NULL)
                    req->key = s;
                req->key_len = (p-- - req->key);
                req->key_count += 1;
            } else {
                p = s;
            }
        }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 190 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 32 )
		goto st7;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto st0;
tr18:
#line 100 "memcached/internal/memcached_text.rl"
	{ s = p; }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 211 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto tr19;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st8;
	goto st0;
tr19:
#line 101 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->flags) == -1) return -3; }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 225 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr22;
	goto st0;
tr22:
#line 97 "memcached/internal/memcached_text.rl"
	{ s = p; }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 239 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto tr23;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st10;
	goto st0;
tr23:
#line 98 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->exptime) == -1) return -2; }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 253 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto st11;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr26;
	goto st0;
tr26:
#line 103 "memcached/internal/memcached_text.rl"
	{ s = p; }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 267 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 10: goto tr27;
		case 13: goto tr28;
		case 32: goto tr29;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st12;
	goto st0;
tr27:
#line 104 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->bytes) == -1) return -4; }
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 76 "memcached/internal/memcached_text.rl"
	{
            req->data = p;
            req->data_len = req->bytes;

            if (req->data + req->data_len <= pe - 2) {
                if (strncmp(req->data + req->data_len, "\r\n", 2) != 0) {
                    return -7;
                }
                p += req->bytes + 2;
            } else {
                return (req->data_len + 2) - (pe - req->data);
            }
        }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr31:
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 76 "memcached/internal/memcached_text.rl"
	{
            req->data = p;
            req->data_len = req->bytes;

            if (req->data + req->data_len <= pe - 2) {
                if (strncmp(req->data + req->data_len, "\r\n", 2) != 0) {
                    return -7;
                }
                p += req->bytes + 2;
            } else {
                return (req->data_len + 2) - (pe - req->data);
            }
        }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr41:
#line 117 "memcached/internal/memcached_text.rl"
	{ req->noreply = true; }
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 76 "memcached/internal/memcached_text.rl"
	{
            req->data = p;
            req->data_len = req->bytes;

            if (req->data + req->data_len <= pe - 2) {
                if (strncmp(req->data + req->data_len, "\r\n", 2) != 0) {
                    return -7;
                }
                p += req->bytes + 2;
            } else {
                return (req->data_len + 2) - (pe - req->data);
            }
        }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr69:
#line 107 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->cas) == -1) return -5; }
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 76 "memcached/internal/memcached_text.rl"
	{
            req->data = p;
            req->data_len = req->bytes;

            if (req->data + req->data_len <= pe - 2) {
                if (strncmp(req->data + req->data_len, "\r\n", 2) != 0) {
                    return -7;
                }
                p += req->bytes + 2;
            } else {
                return (req->data_len + 2) - (pe - req->data);
            }
        }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr82:
#line 110 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->inc_val) == -1) return -6; }
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr86:
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr96:
#line 117 "memcached/internal/memcached_text.rl"
	{ req->noreply = true; }
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr108:
#line 98 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->exptime) == -1) return -2; }
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr120:
#line 140 "memcached/internal/memcached_text.rl"
	{req->op = MC_FLUSH;}
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr125:
#line 113 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->exptime) == -1) return -7; }
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr151:
#line 141 "memcached/internal/memcached_text.rl"
	{req->op = MC_QUIT;}
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
tr167:
#line 139 "memcached/internal/memcached_text.rl"
	{req->op = MC_STATS;}
#line 115 "memcached/internal/memcached_text.rl"
	{ p++; }
#line 89 "memcached/internal/memcached_text.rl"
	{
            *p_ptr = p;
            done = true;
        }
	goto st114;
st114:
	if ( ++p == pe )
		goto _test_eof114;
case 114:
#line 464 "memcached/internal/memcached_text.c"
	goto st0;
tr28:
#line 104 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->bytes) == -1) return -4; }
	goto st13;
tr42:
#line 117 "memcached/internal/memcached_text.rl"
	{ req->noreply = true; }
	goto st13;
tr70:
#line 107 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->cas) == -1) return -5; }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 482 "memcached/internal/memcached_text.c"
	if ( (*p) == 10 )
		goto tr31;
	goto st0;
tr29:
#line 104 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->bytes) == -1) return -4; }
	goto st14;
tr71:
#line 107 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->cas) == -1) return -5; }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 498 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 10: goto tr31;
		case 13: goto st13;
		case 32: goto st14;
		case 78: goto st15;
		case 110: goto st15;
	}
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 79: goto st16;
		case 111: goto st16;
	}
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 82: goto st17;
		case 114: goto st17;
	}
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 69: goto st18;
		case 101: goto st18;
	}
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 80: goto st19;
		case 112: goto st19;
	}
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	switch( (*p) ) {
		case 76: goto st20;
		case 108: goto st20;
	}
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 89: goto st21;
		case 121: goto st21;
	}
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 10: goto tr41;
		case 13: goto tr42;
		case 32: goto tr43;
	}
	goto st0;
tr43:
#line 117 "memcached/internal/memcached_text.rl"
	{ req->noreply = true; }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 579 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 10: goto tr31;
		case 13: goto st13;
		case 32: goto st22;
	}
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 80: goto st24;
		case 112: goto st24;
	}
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 69: goto st25;
		case 101: goto st25;
	}
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 78: goto st26;
		case 110: goto st26;
	}
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 68: goto st27;
		case 100: goto st27;
	}
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 32 )
		goto tr49;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 65: goto st29;
		case 97: goto st29;
	}
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 83: goto st30;
		case 115: goto st30;
	}
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 32 )
		goto tr52;
	goto st0;
tr52:
#line 131 "memcached/internal/memcached_text.rl"
	{req->op = MC_CAS;}
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 662 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 13: goto st0;
		case 32: goto st31;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st0;
	goto tr53;
tr53:
#line 64 "memcached/internal/memcached_text.rl"
	{
            s = p;
            for (; p < pe && *p != ' ' && *p != '\r' && *p != '\n'; p++);
            if (*p == ' ' || *p == '\r' || *p == '\n') {
                if (req->key == NULL)
                    req->key = s;
                req->key_len = (p-- - req->key);
                req->key_count += 1;
            } else {
                p = s;
            }
        }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 689 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 32 )
		goto st33;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr56;
	goto st0;
tr56:
#line 100 "memcached/internal/memcached_text.rl"
	{ s = p; }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 710 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto tr57;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st34;
	goto st0;
tr57:
#line 101 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->flags) == -1) return -3; }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 724 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto st35;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr60;
	goto st0;
tr60:
#line 97 "memcached/internal/memcached_text.rl"
	{ s = p; }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 738 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto tr61;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st36;
	goto st0;
tr61:
#line 98 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->exptime) == -1) return -2; }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 752 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto st37;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr64;
	goto st0;
tr64:
#line 103 "memcached/internal/memcached_text.rl"
	{ s = p; }
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 766 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto tr65;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st38;
	goto st0;
tr65:
#line 104 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->bytes) == -1) return -4; }
	goto st39;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
#line 780 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto st39;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr68;
	goto st0;
tr68:
#line 106 "memcached/internal/memcached_text.rl"
	{ s = p; }
	goto st40;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
#line 794 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 10: goto tr69;
		case 13: goto tr70;
		case 32: goto tr71;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st40;
	goto st0;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	switch( (*p) ) {
		case 69: goto st42;
		case 101: goto st42;
	}
	goto st0;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	switch( (*p) ) {
		case 67: goto st43;
		case 76: goto st59;
		case 99: goto st43;
		case 108: goto st59;
	}
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	switch( (*p) ) {
		case 82: goto st44;
		case 114: goto st44;
	}
	goto st0;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	if ( (*p) == 32 )
		goto tr77;
	goto st0;
tr77:
#line 137 "memcached/internal/memcached_text.rl"
	{req->op = MC_DECR;}
	goto st45;
tr140:
#line 136 "memcached/internal/memcached_text.rl"
	{req->op = MC_INCR;}
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 851 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 13: goto st0;
		case 32: goto st45;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st0;
	goto tr78;
tr78:
#line 64 "memcached/internal/memcached_text.rl"
	{
            s = p;
            for (; p < pe && *p != ' ' && *p != '\r' && *p != '\n'; p++);
            if (*p == ' ' || *p == '\r' || *p == '\n') {
                if (req->key == NULL)
                    req->key = s;
                req->key_len = (p-- - req->key);
                req->key_count += 1;
            } else {
                p = s;
            }
        }
	goto st46;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
#line 878 "memcached/internal/memcached_text.c"
	if ( (*p) == 32 )
		goto st47;
	goto st0;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	if ( (*p) == 32 )
		goto st47;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr81;
	goto st0;
tr81:
#line 109 "memcached/internal/memcached_text.rl"
	{ s = p; }
	goto st48;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
#line 899 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 10: goto tr82;
		case 13: goto tr83;
		case 32: goto tr84;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st48;
	goto st0;
tr109:
#line 98 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->exptime) == -1) return -2; }
	goto st49;
tr97:
#line 117 "memcached/internal/memcached_text.rl"
	{ req->noreply = true; }
	goto st49;
tr83:
#line 110 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->inc_val) == -1) return -6; }
	goto st49;
tr121:
#line 140 "memcached/internal/memcached_text.rl"
	{req->op = MC_FLUSH;}
	goto st49;
tr126:
#line 113 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->exptime) == -1) return -7; }
	goto st49;
tr152:
#line 141 "memcached/internal/memcached_text.rl"
	{req->op = MC_QUIT;}
	goto st49;
tr168:
#line 139 "memcached/internal/memcached_text.rl"
	{req->op = MC_STATS;}
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
#line 940 "memcached/internal/memcached_text.c"
	if ( (*p) == 10 )
		goto tr86;
	goto st0;
tr110:
#line 98 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->exptime) == -1) return -2; }
	goto st50;
tr84:
#line 110 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->inc_val) == -1) return -6; }
	goto st50;
tr127:
#line 113 "memcached/internal/memcached_text.rl"
	{ if (mc_strtoul(s, p, &req->exptime) == -1) return -7; }
	goto st50;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
#line 960 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 10: goto tr86;
		case 13: goto st49;
		case 32: goto st50;
		case 78: goto st51;
		case 110: goto st51;
	}
	goto st0;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
	switch( (*p) ) {
		case 79: goto st52;
		case 111: goto st52;
	}
	goto st0;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
	switch( (*p) ) {
		case 82: goto st53;
		case 114: goto st53;
	}
	goto st0;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	switch( (*p) ) {
		case 69: goto st54;
		case 101: goto st54;
	}
	goto st0;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
	switch( (*p) ) {
		case 80: goto st55;
		case 112: goto st55;
	}
	goto st0;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
	switch( (*p) ) {
		case 76: goto st56;
		case 108: goto st56;
	}
	goto st0;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
	switch( (*p) ) {
		case 89: goto st57;
		case 121: goto st57;
	}
	goto st0;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
	switch( (*p) ) {
		case 10: goto tr96;
		case 13: goto tr97;
		case 32: goto tr98;
	}
	goto st0;
tr98:
#line 117 "memcached/internal/memcached_text.rl"
	{ req->noreply = true; }
	goto st58;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
#line 1041 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 10: goto tr86;
		case 13: goto st49;
		case 32: goto st58;
	}
	goto st0;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
	switch( (*p) ) {
		case 69: goto st60;
		case 101: goto st60;
	}
	goto st0;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
	switch( (*p) ) {
		case 84: goto st61;
		case 116: goto st61;
	}
	goto st0;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
	switch( (*p) ) {
		case 69: goto st62;
		case 101: goto st62;
	}
	goto st0;
st62:
	if ( ++p == pe )
		goto _test_eof62;
case 62:
	if ( (*p) == 32 )
		goto tr103;
	goto st0;
tr103:
#line 135 "memcached/internal/memcached_text.rl"
	{req->op = MC_DELETE;}
	goto st63;
st63:
	if ( ++p == pe )
		goto _test_eof63;
case 63:
#line 1090 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 13: goto st0;
		case 32: goto st63;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st0;
	goto tr104;
tr104:
#line 64 "memcached/internal/memcached_text.rl"
	{
            s = p;
            for (; p < pe && *p != ' ' && *p != '\r' && *p != '\n'; p++);
            if (*p == ' ' || *p == '\r' || *p == '\n') {
                if (req->key == NULL)
                    req->key = s;
                req->key_len = (p-- - req->key);
                req->key_count += 1;
            } else {
                p = s;
            }
        }
	goto st64;
st64:
	if ( ++p == pe )
		goto _test_eof64;
case 64:
#line 1117 "memcached/internal/memcached_text.c"
	switch( (*p) ) {
		case 10: goto tr86;
		case 13: goto st49;
		case 32: goto st65;
	}
	goto st0;
st65:
	if ( ++p == pe )
		goto _test_eof65;
case 65:
